# wayland-testing

./: Cargo.toml  README.md  justfile
.devcontainer/: Dockerfile  devcontainer.json
resources/testing/: README.md
src/: log.rs  main.rs  main_old.rs
src/backend/: README.md  mod.rs  winit.rs
src/backend/renderer/: mod.rs
src/backend/winit/: mod.rs  state.rs
src/input/: mod.rs
src/runtime/: extension.rs  main.rs  messages.rs  mod.rs  module.rs
src/shell/: mod.rs  workspace.rs
src/state/: buffer.rs  compositor.rs  data_device.rs  dmabuf.rs  layer_shell.rs  mod.rs  output.rs  primary_selection.rs  seat.rs  shm.rs  xdg_shell.rs
src/state/wayland/: mod.rs  xdg_shell.rs
src/ts/: main.ts
src/wm/: README.md
