[package]
name = "electrum"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Jamie Murphy <hello@itsjamie.dev>"]
default-run = "electrum"

# List all available outputs
[[bin]]
name = "output"

# Show an image
[[bin]]
name = "image"

[features]
default = []
debug = []

[profile.dev]
lto = "thin"

[profile.fastdebug]
inherits = "release"
debug = true

[profile.release]
lto = "fat"

[dependencies]
anyhow = "1.0.61"
slog = { version = "2.7.0", features = [] }
slog-stdlog = "4.1.0"
slog-scope = "4.4.0"
slog-term = "2.9.0"
image = "0.24.3"
xdg = "2.4.1"
deno_runtime = "0.73.0"
num_cpus = "1.13.1"
deno_core = "0.147.0"

[dependencies.calloop]
features = [ "executor" ]
version = "0.10.1"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
default-features = false
features = ["backend_winit", "backend_drm", "desktop", "slog-stdlog"]

[dependencies.sctk]
package = "smithay-client-toolkit"
git = "https://github.com/Smithay/client-toolkit.git"
